# tace

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.rst  pyproject.toml
cartnn/math/: __init__.py  _normalize_activation.py  _radial.py  _reduce.py  perm.py
cartnn/nn/: __init__.py  _activation.py  _batchnorm.py  _dropout.py  _extract.py  _fc.py  _gate.py  _identity.py  _normact.py
cartnn/nn/models/: gate_points_2101.py  gate_points_2102.py
cartnn/o3/: __init__.py  _cartesian_harmonics.py  _change_of_basis.py  _ictd.py  _irreps.py  _linear.py  _norm.py  _rotate.py  _spherical_harmonics.py  _wigner.py  _zemin.py
cartnn/o3/_tensor_product/: _codegen.py  _sub.py  _tensor_product.py
cartnn/o3/experimental/: _elementwise_tp.py  _full_tp.py
cartnn/o3/irrep/: __init__.py
cartnn/util/: __init__.py  _argtools.py  _context.py  default_type.py  jit.py  test.py  torch_scatter.py
cartnn/util/codegen/: _mixin.py
docs/source/: conf.py  index.rst
docs/source/changelog/: changelog.rst
example/3BPA/: tace.yaml
tace/: __init__.py
tace/dataset/: dataloader.py  datamodule.py  element.py  graph.py  neighbour_list.py  quantity.py  read.py  split.py  statistics.py  utils.py
tace/lightning/: lit_model.py  select_model.py  trainer.py
tace/models/: __init__.py  act.py  angular.py  base.py  ctr.py  embedding.py  gate.py  ictd.py  inter.py  linear.py  mlp.py  paths.py  prod.py  quantity.py  radial.py  readout.py  representation.py  rotate.py  so2_ctr.py  tace.py  test.py  utils.py  wrapper.py
tace/scripts/: clean.py  convert.py  eval.py  export.py  graph.py  split.py  train.py
tace/utils/: _global.py  callbacks.py  cfg.py  ema.py  env.py  hydra_resolver.py  logger.py  lr_scheduler.py  metrics.py  spectra.py  strategy.py  torch_scatter.py  units.py  utils.py
(+63 files in other folders)
